--- a/BoardWebApp/Views/Shared/_Layout.cshtml
+++ b/BoardWebApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,30 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Announcements" asp-action="Create">Create</a>
                         </li>
                     </ul>
+                    @using Microsoft.AspNetCore.Authentication
+                    @using Microsoft.AspNetCore.Authorization
+                    @using Microsoft.AspNetCore.Identity
+                    @using Microsoft.AspNetCore.Http
+
+                    <ul class="navbar-nav ms-auto">
+                        @if (User.Identity != null && User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <span class="nav-link text-dark">Привіт, @User.Identity.Name!</span>
+                            </li>
+                            <li class="nav-item">
+                                <form method="post" asp-controller="Account" asp-action="Logout">
+                                    <button type="submit" class="btn btn-link nav-link">Вийти</button>
+                                </form>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Увійти з Google</a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
         </nav>
