--- a/BoardWebApp/Views/Shared/_Layout.cshtml
+++ b/BoardWebApp/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Announcements" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Announcements" asp-action="Create">Create</a>
+                            <a class="btn btn-sm btn-primary" asp-area="" asp-controller="Announcements" asp-action="Create">Create</a>
                         </li>
                     </ul>
                     @using Microsoft.AspNetCore.Authentication
