--- a/BoardWebApp/Views/Announcements/Index.cshtml
+++ b/BoardWebApp/Views/Announcements/Index.cshtml
@@ -7,7 +7,9 @@
 
     <form method="get" class="row mb-4">
         <div class="col-md-4">
-            <select name="category" class="form-select" onchange="this.form.submit()">
+            <select name="category" class="form-select" onchange="document.querySelector('[name=subcategory]')
+                .selectedIndex = 0; this.form.submit()">
+
                 <option value="">-- Всі категорії --</option>
                 @foreach (var cat in ViewBag.Categories)
                 {
@@ -31,7 +33,6 @@
         </div>
     </form>
 
-
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         @foreach (var announcement in Model)
         {
@@ -43,7 +44,7 @@
                         <p class="text-muted">
                             @announcement.Category / @announcement.SubCategory <br />
                             Дата: @announcement.CreatedDate.ToString("dd.MM.yyyy") <br />
-                            Статус: <strong>@announcement.Status</strong>
+                            Статус: <strong>@(announcement.Status ? "Активне" : "Неактивне")</strong>
                         </p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
