--- a/BoardWebApp/Views/Shared/_Layout.cshtml
+++ b/BoardWebApp/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Announcements" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item d-flex align-items-center">
                             <a class="btn btn-sm btn-primary" asp-area="" asp-controller="Announcements" asp-action="Create">Create</a>
                         </li>
                     </ul>
